* #562 : share/unshare folders