@@ -1,1 +1,2 @@
 * #562 : share/unshare folders
+* #567 : batch file up run as members
